Fix Color Input Alignments in Grid Group
+ Add different icon value for disabled checkbox(es) and radio(s).

--- a/lot/plugins/manager/assets/shell/layout.css
+++ b/lot/plugins/manager/assets/shell/layout.css
@@ -180,6 +180,13 @@ html {
   height:auto;
 }
 
+.grid-group-color input[type="color"] {
+  display:block;
+  margin:.38461538461538464em 0;
+}
+
+.grid-group-options .options .options {padding-left:1em}
+
 @media (max-width:36.25em) {
   .media {padding-left:0}
   .media-capture {display:none}
